ADAPT-5416 fix blurry text
Blurry text on transforms caused by percentage width not being an
integer. Solution: use JS to round widths and flexbox to ensure elements
are pushed left and right without floating.

Also ensure that responsive behaviour is retained.

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -28,6 +28,9 @@
 // Scope the styles to flipcard-component's
 .flipcard-component {
   .flipcard-widget {
+    display: flex;
+    justify-content: space-between;
+
     .vendor-prefix(perspective, 600px);
   }
 
@@ -40,7 +43,7 @@
     background-color: transparent !important;
     border: 0;
     color: @item-text-color;
-    float: left;
+    //float: left;
     margin: 0 0 5px;
     overflow: hidden;
     padding: 0;
@@ -63,15 +66,7 @@
 
       // Spacing between side by side items
       &.flipcard-multiple {
-        width: 49%;
-
-        &:nth-child(odd) {
-          margin-right: 1%;
-        }
-
-        &:nth-child(even) {
-          margin-left: 1%;
-        }
+        flex: 0 0 49%;
       }
     }
 
